tests/errors/type_mismatch_less_than.dang
# Test less than comparison type mismatch
let result = "hello" < 42
